--- a/gb/24/6/28/n14279523.md
+++ b/gb/24/6/28/n14279523.md
@@ -7,7 +7,7 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月28日讯】（大纪元记者黄玉燕台湾台中报导）台中48岁女性上班族近期有间歇性头晕，走在路上，感觉地面摇晃到让她发抖、恶心，甚至上半身麻木，症状超过4周受不了就医。经医师诊断，发现她的症状是从4月3日地震后开始，经过抗焦虑等药物治疗，头晕、麻木症状已缓解，自觉性颤抖仍治疗中。</p>
-<figure id="14279524" aria-describedby="caption-14279524" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14279524-692084-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14279524-692084-450x300.jpg" alt="台中医院神经内科医师王星翰指出人脑各部位主掌不同功能，及患者眩晕的原因。" width="500" /></a><figcaption id="caption-14279524" class="wp-caption-text">台中医院神经内科医师王星翰指出人脑各部位主掌不同功能，及患者眩晕的原因。（黄玉燕／大纪元）</figcaption></figure>
+<figure id="14279524" aria-describedby="caption-14279524" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14279524-692084-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14279524-692084-450x300.jpg" alt="台中医院神经内科医师王星翰指出人脑各部位主掌不同功能，及患者眩晕的原因。" width="500" /></a><figcaption id="caption-14279524" class="wp-caption-text">台中医院神经内科医师王星翰指出人脑各部位主掌不同功能，及患者眩晕的原因。（黄玉燕／大纪元）</figcaption></figure>
 <p>台中医院神经内科医师王星翰指出，患者曾经历921大地震，当时她正在南投娘家坐月子，半夜天摇地动时，她正在喂母奶；今年4月3日手机警报响时，她正在讲电话，突发的声响让她当场吓到，之后出现相关症状。</p>
 <p>经检查，排除患者头晕、肢体麻木等神经传导疾病，进一步给予心理支持，及开立抗焦虑及抗头晕药物。另为帮助患者身心状态不易受到外在因素起伏，他建议患者可进行专注及放松运动，以维持自律神经的稳定。</p>
 <p>王星翰指出，0403大地震后，以他诊间在2个月内，就出现近10个患者是因震后不明的头晕头痛就医，年纪从38岁到85岁不等。他说，造成头晕原因很多，包括耳石脱落、睡眠不足、电解质失衡、甚至脑血管疾病；在临床上必须先进行检查找出病因，才能根据病因给予适切治疗，如调整生活作息，治疗内科疾病、或服用循环促进药物等。</p>
@@ -20,35 +20,36 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/28/n14125527.md#1">《全罗道》改编实事 薛景求为戏减重饿到头晕</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/8/n14132642.md#1">头晕2年服药仍未改善 竟是狭心症作祟</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/1/n14216146.md#1">头晕以为压力大 大叔晕厥验出糖尿病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279312.md#1">中市iBike 1.0 退场一年  遭质疑单车堆置等报废</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279325.md#1">苹果公益儿童剧  挺植物人阿嬷帮“抓龙”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279345.md#1">最大高铁站开发案  “台中高铁娱乐城”招商挤爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279287.md#1">五亿高中生案一审 夏男被控假结婚判刑1年半</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278587.md#1">中山医大携手跨域企业 打造高龄医疗产业生态圈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308028.md#1">赖清德视察中荣智慧医疗 赞台湾不只有半导体</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308000.md#1">AIT处长谷立言拜会 卢秀燕：盼与美各领域合作</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307267.md#1">青年无人机专长返乡受挫 衔接智慧农业上工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307236.md#1">假租农地偷倒废弃物 中市警围堵开罚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307215.md#1">壮爸无炸不欢 大肠癌三期术后天天五蔬果</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11255834.md#1" target="_blank">颜丹：日本作家村上春树新作引发的中国效应</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278014.md#1">【时事军事】精确导弹在太平洋击中移动舰艇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277862.md#1">【时事金扫描】摧毁上百无人机 乌导弹威胁莫斯科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277984.md#1">【新闻看点】2日本人苏州遇刺 又是“偶发”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14275935.md#1">Costco烤鸡包装有重大改变 粉丝为何不高兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276844.md#1">中国经济萧条到处可见 商场门庭冷落</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277610.md#1">李强称“经济不能下猛药”遭删 泄露何秘密？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276922.md#1">颂乐高雄开唱说想留在台湾 献唱张惠妹歌曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277240.md#1">成龙代言的防毒软件卡巴斯基遭美国禁售</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277316.md#1">为角色增重15公斤 黄晓明领奖时激动手抖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278909.md#1">黄子韬谈经纪人被抓：演唱会对我是一种阴影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278023.md#1">章子怡疑不满新片戏份被剪？受访片段引揣测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278607.md#1">专家推荐搭机前吃这种水果 让飞行更舒适</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277393.md#1">婚姻陷入低潮 看韩剧翻转婚姻奇迹的启示</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14275940.md#1">造成人体不舒服、生病的六种邪气（中）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271997.md#1">退休生活：什么时候领退休金最划算？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307614.md#1">【菁英论坛】紧张局势陡升 中东成火药桶？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/28/n14279523.htm">走路天摇地动 “震后症候群”恐晕眩手麻、颤抖</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279523.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
